Fix books alignment

--- a/css/sass/_about.scss
+++ b/css/sass/_about.scss
@@ -18,9 +18,8 @@ ol.books{
     }
   }
   li{
-    height:160px;
     float:left;
-    margin:0 .4em .4em 0;
+    margin:0 10px 10px 0;
   }
 }
 
